added email invite and registration for non existing accounts

--- a/gift_tracker/gifts/templates/gifts/group_detail.html
+++ b/gift_tracker/gifts/templates/gifts/group_detail.html
@@ -6,8 +6,8 @@
     
     <h2 class="text-2xl font-semibold mb-4">Members</h2>
     <ul class="list-disc list-inside mb-6">
-        {% for member in group.members.all %}
-            <li>{{ member.username }}</li>
+        {% for member in members %}
+            <li>{{ member.first_name }} {{ member.last_name }}</li>
         {% endfor %}
     </ul>
     
