--- a/gift_tracker/gifts/templates/gifts/home.html
+++ b/gift_tracker/gifts/templates/gifts/home.html
@@ -1,21 +1,22 @@
 {% extends 'gifts/base.html' %}
 
 {% block content %}
-<div class="container mx-auto px-4 py-8">
-    <h1 class="text-3xl font-bold mb-6">Welcome to Gift Tracker</h1>
-    
+<div class="text-center">
+    <i class="fas fa-gift text-danger mb-3" style="font-size: 4rem;"></i>
+    <h1 class="mb-4">Welcome to Gift Tracker</h1>
+
     {% if user.is_authenticated %}
-        <p class="mb-4">Hello, {{ user.username }}!</p>
-        <a href="{% url 'group_list' %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-            View My Groups
+        <p class="mb-3">Hello, {{ user.username }}!</p>
+        <a href="{% url 'group_list' %}" class="btn btn-danger btn-lg">
+            <i class="fas fa-users me-2"></i>View My Groups
         </a>
     {% else %}
-        <p class="mb-4">Please log in to start tracking your gifts.</p>
-        <a href="{% url 'login' %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mr-2">
-            Login
+        <p class="mb-3">Please log in to start tracking your gifts.</p>
+        <a href="{% url 'login' %}" class="btn btn-danger btn-lg me-2">
+            <i class="fas fa-sign-in-alt me-2"></i>Login
         </a>
-        <a href="{% url 'register' %}" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">
-            Register
+        <a href="{% url 'register' %}" class="btn btn-success btn-lg">
+            <i class="fas fa-user-plus me-2"></i>Register
         </a>
     {% endif %}
 </div>
