--- a/gift_tracker/static/css/style.css
+++ b/gift_tracker/static/css/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f0f0f0;
+    background-image: url('/static/images/gift-pattern.png');
 }
 
 .gift-card {
