Added render stuff

--- a/gift_tracker/gifts/templates/gifts/add_gift.html
+++ b/gift_tracker/gifts/templates/gifts/add_gift.html
@@ -25,8 +25,8 @@
             </div>
         </div>
         <div class="text-center mt-3">
-            <a href="{% url 'gift_list' group.id %}" class="text-danger">
-                <i class="fas fa-arrow-left me-1"></i>Back to Gift List
+            <a href="{% url 'group_detail' group.id %}" class="text-danger">
+                <i class="fas fa-arrow-left me-1"></i>Back to Group
             </a>
         </div>
     </div>
