--- a/gift_tracker/gifts/templates/gifts/group_detail.html
+++ b/gift_tracker/gifts/templates/gifts/group_detail.html
@@ -54,12 +54,10 @@
     <a href="{% url 'add_gift' group.id %}" class="btn btn-success me-2">
         <i class="fas fa-plus me-1"></i>Add Gift Idea
     </a>
-    <a href="{% url 'invite_user' group.id %}" class="btn btn-warning">
+    <a href="{% url 'invite_user' group.id %}" class="btn btn-danger">
         <i class="fas fa-user-plus me-1"></i>Invite User
     </a>
 </div>
 
-<a href="{% url 'add_gift' group.id %}" class="btn btn-danger btn-lg rounded-circle position-fixed bottom-0 end-0 m-4" style="width: 60px; height: 60px;">
-    <i class="fas fa-plus" style="font-size: 1.5rem;"></i>
-</a>
+
 {% endblock %}
