--- a/gift_tracker/gifts/templates/gifts/group_list.html
+++ b/gift_tracker/gifts/templates/gifts/group_list.html
@@ -8,8 +8,10 @@
         {% for group in groups %}
             <div class="col">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-header bg-danger text-white">
                         <h2 class="card-title">{{ group.name }}</h2>
+                    </div>
+                    <div class="card-body">
                         <p class="card-text">Members: {{ group.members.count }}</p>
                         <a href="{% url 'group_detail' group.id %}" class="btn btn-primary">
                             View Group
